--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -32,6 +32,8 @@ set(LIBRARY_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/lib)
 rosbuild_check_for_display(disp)
 if(disp)
   rosbuild_add_rostest(launch/my_test.test)
+  rosbuild_add_rostest(launch/my_test_2.test)
+  rosbuild_add_rostest(launch/my_test_3.test)
 else(disp)
   rosbuild_add_roslaunch_check(launch robot:=cob3-3)
 endif(disp)
