--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -33,8 +33,8 @@ rosbuild_check_for_display(disp)
 if(disp)
   #rosbuild_add_rostest(launch/my_test.test)
   #rosbuild_add_rostest(launch/my_test_2.test)
-  #rosbuild_add_rostest(launch/my_test_3.test)
-  rosbuild_add_rostest(my_test_5_ipa.test)
+  #rosbuild_add_rostest(my_test_3.test)
+  rosbuild_add_rostest(launch/my_test_5_ipa.test)
 else(disp)
   rosbuild_add_roslaunch_check(launch robot:=cob3-3)
 endif(disp)
